# Parmanu

./: README.md
Parmanu-builder/: README.md  meson.build  org.gnome.parmanu.json
Parmanu-builder/data/: meson.build  org.gnome.parmanu.desktop.in  org.gnome.parmanu.gschema.xml  org.gnome.parmanu.metainfo.xml.in  org.gnome.parmanu.service.in
Parmanu-builder/data/icons/: meson.build
Parmanu-builder/po/: POTFILES.in  meson.build
Parmanu-builder/src/: file_conversion_ui  file_merging.ui  file_splitting.ui  hero_section.ui  main.py  meson.build  parmanu-builder.gresource.xml  parmanu-builder.in  window.py  window.ui
Parmanu-builder/src/Styles/: Styles.css
